--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "rootDir": "",
     "scriptPreprocessor": "jest/preprocessor.js"
   },
-   "repository": {
+  "repository": {
     "type": "git",
     "url": "https://github.com/js-next/react-style"
+  },
+  "dependencies": {
+    "fbjs": "^0.4.0"
   }
 }
